fix: 清理项目告警并修复下载导出